--- a/render.yml
+++ b/render.yml
@@ -1,13 +1,17 @@
 services:
   - type: web
-    name: django-backend
+    name: backend
     runtime: python
-    buildCommand: chmod +x render-build.sh && ./render-build.sh
-    startCommand: gunicorn backend.wsgi:application
+    buildCommand: |
+      cd backend
+      pip install -r requirements.txt
+      python manage.py migrate
+      python manage.py collectstatic --noinput
+    startCommand: |
+      cd backend
+      gunicorn your_project_name.wsgi:application
     envVars:
       - key: DATABASE_URL
         fromDatabase:
           name: asrdata
           property: connectionString
-      - key: SECRET_KEY
-        generateValue: true
